# mlip_parallelepiped

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: demo.yaml
docs/: notes.md
examples/: cube_vs_parallelepiped.py  parallelepiped_3d.py  toy_2d.py
mcips/: __init__.py  solve.py  solver.py
mlip_parallelepiped/: __init__.py  geometry.py  solve.py  visualization.py
notebooks/: experiments.ipynb  mlip_parallelepiped.ipynb
report/: report.tex
tests/: test_solver.py
