[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcips"
version = "0.3.0"
description = "MCIPS: Maximized-Center Inscribed Parallelepiped Search для MILP"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "matplotlib", "pyyaml"]

[tool.setuptools]
packages = ["mcips"]
